[package]
name = "zlang"
version = "0.1.0"
authors = ["zayfen <zhangyunfeng0101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["parser"]

[dependencies]
parser = { path="parser", version="0.1.0" }

[[bin]]
name="zlang"
path="src/main.rs"
