[package]
name = "parser"
version = "0.1.0"
authors = ["zayfen <zhangyunfeng0101@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop="0.17"

[dependencies]
lalrpop-util="0.17"
log="0.4.1"
regex = "1"
num-bigint = "0.2"
num-traits = "0.2"
unicode-xid = "0.2.0"
unic-emoji-char = "0.9.0"
wtf8 = "0.0.3"
